@@ -27,6 +27,7 @@
   use setresuid and setresgid if available
   for HEAD, suppress body of error messages (Andreas Krennmair)
   use radix sort in readfrag instead of qsort for big speedup
+  add support for external mime types file (gatling -m /etc/mime.types)
 
 0.8:
   fix pipelining bug
